--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <script src="https://kit.fontawesome.com/891a2b8698.js" crossorigin="anonymous"></script>
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
   <title>Alexapp Meet!</title>
 </head>
 
